@@ -1850,10 +1850,7 @@ X</property>
                           <widget class="GtkComboBox" id="jpeg_resolution_combo">
                             <property name="visible">True</property>
                             <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
-                            <property name="items" translatable="yes">14M
-10M
-6M
-2M</property>
+                            <property name="items" translatable="yes"></property>
                             <signal name="changed" handler="jpeg_resolution_combo_changed_cb"/>
                           </widget>
                           <packing>
